# IeniumGlow

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CmakeLists.txt  README.md  build.bat  vcpkg.json
docs/: memory_and_pipeline.md  pipeline.md
examples/: CMakeLists.txt
examples/basic_rectangle/: CMakeLists.txt  main.cpp
examples/basic_rectangle/Resources/: vertexshader.glsl
examples/basic_triangle/: CMakeLists.txt  main.cpp
examples/basic_triangle/Resources/: fragmentshader.glsl  vertexshader.glsl
examples/dev_proj/: CMakeLists.txt  main.cpp
examples/dev_proj/Resources/: fragmentshader.glsl
include/ienium/glow/: batch_renderer.hpp  camera_2d.hpp  glow.hpp  memorymanager.hpp  openglstatemanager.hpp  rendercommand.hpp  renderer2d.hpp  vertexbuffermanager.hpp
include/ienium/glow/core/: Vector.hpp  internaldefinitions.hpp  publictypes.hpp
src/: CMakeLists.txt  batch_renderer.cpp  memorymanager.cpp  openglstatemanager.cpp  renderer2d.cpp  shader.cpp  vertexbuffermanager.cpp
src/core/: Vector.cpp
tests/: CMakeLists.txt
tests/blend_enum_test/: CMakeLists.txt  main.cpp
tests/vector_test/: CMakeLists.txt  main.cpp
